<resources>
    <string name="app_name">BookStore</string>

    <string name="list_item_sale">Sale</string>

    <string name="product_book">book</string>
    <string name="product_magazine">magazine</string>
    <string name="product_unknown">unknown</string>

    <string name="empty_view_title_text">It\'s a bit lonely here…</string>
    <string name="empty_view_subtitle_text">Get started by adding a book</string>

    <string name="editor_view_add_product">Add Product</string>
    <string name="editor_view_edit_product">Edit Product</string>

    <string name="category_main">Main</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_quantity">Quantity</string>

    <string name="category_type">Type</string>

    <string name="category_supplier">Supplier</string>
    <string name="hint_supplier_name">Name</string>
    <string name="hint_supplier_phone">Phone</string>

    <string name="reduce_quantity">Reduce quantity</string>
    <string name="increase_quantity">Increase quantity</string>
    <string name="delete_product">Delete</string>
    <string name="order_product">Order</string>

    <string name="action_save">Save</string>

    <string name="unsaved_changes_dialog_msg">Required fields are left empty, exit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <string name="editor_insert_product_failed">Insert product failed</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_update_product_failed">Updating product failed</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="editor_update_product_quantity_low">Product is out of stock, can\'t sale</string>
    <string name="editor_delete_new_product">Cannot delete product, it must be added first</string>

    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
</resources>
