<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="some product"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"  />

        <LinearLayout
            android:id="@+id/summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_product_price"
                android:fontFamily="sans-serif"
                android:paddingRight="@dimen/button_margin"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#AEB6BD"  />

            <TextView
                android:id="@+id/summary_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#AEB6BD"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_product_quantity"
                android:paddingLeft="@dimen/button_margin"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#AEB6BD"  />

            <TextView
                android:id="@+id/summary_quantity"
                android:paddingLeft="@dimen/button_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#AEB6BD"  />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/list_item_sale"
        android:text="@string/list_item_sale"
        android:layout_width="wrap_content"
        android:focusable="false"
        android:layout_height="wrap_content" />
</LinearLayout>